# playmymusic

./: .gitignore  CMakeLists.txt  Config.vala.cmake  README.md  meson.build  uncrustify.cfg
data/: CMakeLists.txt  com.github.artemanufrij.playmymusic.appdata.xml  com.github.artemanufrij.playmymusic.appdata.xml.in  com.github.artemanufrij.playmymusic.desktop  com.github.artemanufrij.playmymusic.desktop.in  meson.build
data/icons/: meson.build
debian/: changelog  control  control~  copyright  rules
meson/: post_install.py
po/: CMakeLists.txt  POTFILES  POTFILES.in  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.artemanufrij.playmymusic.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.mo  de.po  (+162 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
schemas/: CMakeLists.txt  com.github.artemanufrij.playmymusic.gschema.xml
src/: Application.vala  CMakeLists.txt  MainWindow.vala  Settings.vala  meson.build
src/Dialogs/: AlbumEditor.vala  ArtistEditor.vala  Preferences.vala
src/Interfaces/: Inhibitor.vala  MediaKeys.vala  SoundIndicator.vala
src/Objects/: Album.vala  Artist.vala  AudioCD.vala  MobilePhone.vala  MobilePhoneMusicFolder.vala  Playlist.vala  Radio.vala  Track.vala  TracksContainer.vala
src/Services/: ArtworkDownloader.vala  DataBaseManager.vala  DeviceManager.vala  LibraryManager.vala  LocalFilesManager.vala  MediaKeys.vala  MusicBrainzManager.vala  Player.vala  TagManager.vala
src/Utils/: MusicBrainz.vala  Utils.vala
src/Widgets/: Album.vala  AlbumView.vala  Artist.vala  ArtistView.vala  Playlist.vala  PlaylistView.vala  Radio.vala  Track.vala  TrackTimeLine.vala
src/Widgets/Views/: AlbumView.vala  AlbumsView.vala  ArtistView.vala  ArtistsView.vala  AudioCDView.vala  MobilePhone.vala  PlaylistView.vala  PlaylistsView.vala  Queue.vala  RadiosView.vala  TracksView.vala
vapi/: config.vapi
