executable(
    meson.project_name(),
    'Application.vala',
    'MainWindow.vala',
    'Settings.vala',
    'Dialogs/AlbumEditor.vala',
    'Dialogs/ArtistEditor.vala',
    'Dialogs/Preferences.vala',
    'Interfaces/Inhibitor.vala',
    'Interfaces/MediaKeys.vala',
    'Interfaces/SoundIndicator.vala',
    'Objects/Album.vala',
    'Objects/Artist.vala',
    'Objects/AudioCD.vala',
    'Objects/MobilePhone.vala',
    'Objects/MobilePhoneMusicFolder.vala',
    'Objects/Playlist.vala',
    'Objects/Radio.vala',
    'Objects/Track.vala',
    'Objects/TracksContainer.vala',
    'Services/DataBaseManager.vala',
    'Services/DeviceManager.vala',
    'Services/LibraryManager.vala',
    'Services/LocalFilesManager.vala',
    'Services/MusicBrainzManager.vala',
    'Services/Player.vala',
    'Services/TagManager.vala',
    'Utils/MusicBrainz.vala',
    'Utils/Utils.vala',
    'Widgets/Album.vala',
    'Widgets/Artist.vala',
    'Widgets/Playlist.vala',
    'Widgets/Radio.vala',
    'Widgets/Track.vala',
    'Widgets/TrackTimeLine.vala',
    'Widgets/Views/AlbumsView.vala',
    'Widgets/Views/AlbumView.vala',
    'Widgets/Views/ArtistsView.vala',
    'Widgets/Views/ArtistView.vala',
    'Widgets/Views/AudioCDView.vala',
    'Widgets/Views/MobilePhone.vala',
    'Widgets/Views/PlaylistsView.vala',
    'Widgets/Views/RadiosView.vala',
    'Widgets/Views/TracksView.vala',
    'Widgets/Views/Queue.vala',
    c_args: c_args,
    dependencies: [
        dependency('gio-2.0'),
        dependency('gobject-2.0'),
        dependency('glib-2.0'),
        dependency('gtk+-3.0'),
        dependency('libsoup-2.4'),
        dependency('json-glib-1.0'),
        dependency('granite'),
        dependency('sqlite3'),
        dependency('gstreamer-pbutils-1.0'),
        dependency('gstreamer-tag-1.0'),
        dependency('taglib_c'),
    ],
    link_args: ['-lm'],
    install : true
)
